# esp32c6-matter-test

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h
main/esp_idf_lib_helpers/: esp_idf_lib_helpers.h
main/i2cdev/: Kconfig
main/scd30/: scd30.h
